<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.belichenko.a.weathertoday.MainActivity$PlaceholderFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/appbar_padding_top"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/city_text"
            android:layout_weight="0.4"
            android:layout_marginEnd="@dimen/appbar_padding_top"
            android:layout_marginRight="@dimen/appbar_padding_top"
            tools:text="City"/>

        <AutoCompleteTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="City name"
            android:id="@+id/city_name"
            android:completionThreshold="4"
            android:layout_weight="0.6" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:text="Days"
            android:text="@string/days_of_week_text"
            android:layout_marginEnd="@dimen/appbar_padding_top"
            android:layout_marginRight="@dimen/appbar_padding_top"
            android:layout_weight="0.3"
            android:layout_gravity="center_vertical" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:layout_gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/image_number"
                tools:background="@drawable/numeric_4"
                android:layout_gravity="center_vertical" />
        </FrameLayout>

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/days_display"
            android:layout_weight="0.6"
            android:max="7"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lang_text"
        android:layout_weight="0.4"
        android:layout_marginEnd="@dimen/appbar_padding_top"
        android:layout_marginRight="@dimen/appbar_padding_top"
        tools:text="Language"
        android:layout_gravity="center_vertical" />

        <RadioGroup
            android:id="@+id/rg_language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.6">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ru"
                android:id="@+id/radioButton_ru" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="en"
                android:id="@+id/radioButton_en" />
        </RadioGroup>

    </LinearLayout>
</LinearLayout>